--- a/css/styles.css
+++ b/css/styles.css
@@ -162,14 +162,24 @@ img {
 .icon-contacts-smartphone {
   fill: currentColor;
 }
-/*.icon-contacts-mail:hover,
-.icon-contacts-mail:focus {
-  fill: var(--accent-color);
+.site-nav-item .effect {
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
-.icon-contacts-smartphone:hover,
-.icon-contacts-smartphone:focus {
-  fill: var(--accent-color);
+.effect {
+  position: relative;
 }
+.effect::after {
+  content: '';
+  width: 100%;
+  height: 4px;
+  position: absolute;
+  bottom: 0;
+  border-radius: 2px;
+  right: 0;
+  background: var(--accent-color);
+}
+
 /*---Hero---*/
 .hero,
 .adress {
@@ -283,6 +293,29 @@ img {
   display: flex;
   justify-content: space-between;
 }
+.description-pictures-item {
+  position: relative;
+}
+
+.description-pictures-text-overlay {
+  position: absolute;
+  width: 370px;
+  height: 70px;
+  bottom: 0;
+  left: 0;
+  padding-top: 27px;
+  padding-bottom: 27px;
+  background: rgba(47, 48, 58, 0.8);
+
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.14;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+
 .members-team {
   margin-bottom: 50px;
 }
@@ -536,4 +569,31 @@ img {
   padding-bottom: 20px;
   padding-left: 24px;
   padding-right: 24px;
+}
+.galery-images-box {
+  position: relative;
+  overflow: hidden;
+}
+.galery-images-overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+
+  background: rgba(33, 150, 243, 0.9);
+  padding: 63px 24px;
+
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 1.56;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+  overflow: auto;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.galery-link:hover .galery-images-overlay,
+.galery-link:focus .galery-images-overlay {
+  transform: translateY(0%);
 }
